breeze (4:5.4.1-2~) UNRELEASED; urgency=medium

  * 

 -- Maximiliano Curia <maxy@debian.org>  Tue, 15 Sep 2015 22:23:08 +0200

breeze (4:5.4.1-1) unstable; urgency=medium

  * New upstream release (5.4.1).

 -- Maximiliano Curia <maxy@debian.org>  Fri, 11 Sep 2015 18:45:46 +0200

breeze (4:5.4.1-0ubuntu1) wily; urgency=medium

  * new upstream release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 08 Sep 2015 10:10:36 +0100

breeze (4:5.4.0-1) unstable; urgency=medium

  * New upstream release (5.4.0).

 -- Maximiliano Curia <maxy@debian.org>  Thu, 03 Sep 2015 22:07:07 +0200

breeze (4:5.4.0-0ubuntu1) wily; urgency=medium

  * new upstream release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 31 Aug 2015 15:46:44 +0100

breeze (4:5.3.95-0ubuntu4) wily; urgency=medium

  * No change rebuild to adopt kdecorationv5 everywhere.

 -- Matthias Klose <doko@ubuntu.com>  Sun, 30 Aug 2015 17:07:35 +0200

breeze (4:5.3.95-0ubuntu3) wily; urgency=medium

  * No change rebuild to adopt kdecorationv5. 2nd try after v5 was
    accepted into proposed.

 -- Harald Sitter <sitter@kde.org>  Tue, 25 Aug 2015 14:37:48 +0200

breeze (4:5.3.95-0ubuntu2) wily; urgency=medium

  * No change rebuild to adopt kdecorationv5

 -- Harald Sitter <sitter@kde.org>  Tue, 25 Aug 2015 13:44:31 +0200

breeze (4:5.3.95-0ubuntu1) wily; urgency=medium

  [ Scarlett Clark ]
  * Vivid backport
  * Manual merge.
  * Fix merge.
  * Fix merge again.
  * Fix merge yet again.
  * Merge problems again.

  [ Jonathan Riddell ]
  * new upstream beta release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 10 Aug 2015 23:11:47 +0200

breeze (4:5.3.2-4) unstable; urgency=medium

  * Team upload.
  * Revert my changes from the last upload. (Closes: #794061)
    - Ship a symlink from the qt4 plugin to the kde4 plugin dir.

 -- Felix Geyer <fgeyer@debian.org>  Mon, 03 Aug 2015 22:46:20 +0200

breeze (4:5.3.2-3) unstable; urgency=medium

  [ Maximiliano Curia ]