@@ -1,6 +1,7 @@
 breeze (4:5.4.1-2~) UNRELEASED; urgency=medium
 
-  * 
+  * Fix the x-cursor-theme alternatives. (Closes: #798696) Thanks to
+    Kubuntu and Alejandro Lorenzo Gallego
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 15 Sep 2015 22:23:08 +0200
 
